force-app/main/default/objects/Property_Transaction__c/Property_Transaction__c.object-meta.xml
<CustomObject>
    <label>Property Transaction</label>
    <nameField>
        <displayFormat>PT-{000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>