force-app/main/default/objects/Property_Transaction__c/fields/Lease_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lease_Amount__c</fullName>
    <label>Lease Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>