force-app/main/default/objects/Property_Transaction__c/fields/Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date__c</fullName>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>