force-app/main/default/objects/Property_Transaction__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed-Term Lease</fullName>
            </value>
            <value>
                <fullName>Month-to-Month Lease</fullName>
            </value>
            <value>
                <fullName>Short-Term Lease</fullName>
            </value>
            <value>
                <fullName>Long-Term Lease</fullName>
            </value>
            <value>
                <fullName>Net Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>