force-app/main/default/objects/Property_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Certified Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Personal Check</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Escrow Payment</fullName>
            </value>
            <value>
                <fullName>Mortgage Financing</fullName>
            </value>
            <value>
                <fullName>Seller Financing</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>ACH Transfer</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>Lease Option</fullName>
            </value>
            <value>
                <fullName>Installment Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>