force-app/main/default/objects/Property_Transaction__c/fields/Property_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Property_Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Disposition</label>
    <referenceTo>Property_Disposition__c</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>