force-app/main/default/objects/Property_Transaction__c/recordTypes/Property_Buyer_Investor.recordType-meta.xml
<RecordType>
    <fullName>Property_Buyer_Investor</fullName>
    <active>true</active>
    <label>Property Buyer / Investor</label>
</RecordType>