force-app/main/default/objects/Property_Transaction__c/recordTypes/Property_Tenant.recordType-meta.xml
<RecordType>
    <fullName>Property_Tenant</fullName>
    <active>true</active>
    <label>Property Tenant</label>
</RecordType>